<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignUpActivity">

    <ImageView
        android:id="@+id/iv_Gallery"
        android:layout_width="50sp"
        android:layout_height="50sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.753"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.342"
        app:srcCompat="@drawable/ic_galeri"
        android:contentDescription="@string/choose_image" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/civ_avatar"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.150"
        android:src="@drawable/logo" />

    <EditText
        android:id="@+id/et_Nama"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/rounded_tv_border"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textAutoComplete"
        android:letterSpacing="0.1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/civ_avatar"
        app:layout_constraintStart_toStartOf="@+id/civ_avatar"
        app:layout_constraintTop_toBottomOf="@+id/civ_avatar"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_Email"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_tv_border"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_Nama"
        app:layout_constraintStart_toStartOf="@+id/et_Nama"
        app:layout_constraintTop_toBottomOf="@+id/et_Nama"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/et_Password"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_tv_border"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:letterSpacing="0.1"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        app:layout_constraintEnd_toEndOf="@+id/et_Email"
        app:layout_constraintStart_toStartOf="@+id/et_Email"
        app:layout_constraintTop_toBottomOf="@+id/et_Email"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/bt_Sign_Up"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_shape"
        android:letterSpacing="0.1"
        android:text="@string/sign_up"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/et_Password"
        app:layout_constraintStart_toStartOf="@+id/et_Password"
        app:layout_constraintTop_toBottomOf="@+id/et_Password" />

</androidx.constraintlayout.widget.ConstraintLayout>