<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.AdminFragment"
    android:theme = "@style/Admin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="3">

                <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/civ_avatar"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/logo"
                    app:civ_border_color="#FF000000"
                    android:layout_weight="0.5"
                    app:civ_border_width="2dp" />

                <TextView
                    android:id="@+id/tv_nama"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:layout_gravity="center"
                    android:layout_weight="2"
                    android:textSize="20sp"
                    tools:text="Name" />

                <ImageButton
                    android:id="@+id/btnLogout"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:src="@drawable/ic_logout"
                    android:layout_gravity="center"
                    android:layout_weight="0.2"
                    tools:ignore="OnClick"
                    android:background="@drawable/button_shape2"
                    android:textColor="@android:color/white"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="25dp"
                android:background="#C9C6CA" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/kategori"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spr_type"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="100dp"
                    android:layout_height="150dp"
                    android:src="@drawable/back_poster"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/choose_image" />

                <Button
                    android:id="@+id/bCImg"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginStart="26dp"
                    android:layout_toEndOf="@id/iv_poster"
                    android:text="@string/choose_image"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp"
                    android:background="@drawable/button_shape2"
                    android:textColor="@android:color/white"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="26dp"
                    android:layout_below="@id/bCImg"
                    android:layout_toEndOf="@id/iv_poster">

                <EditText
                    android:id="@+id/et_Title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:hint="@string/title"
                    android:inputType="textCapSentences"
                    android:autofillHints="" />
                </com.google.android.material.textfield.TextInputLayout>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:weightSum="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/genre"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <Spinner
                    android:id="@+id/spr_genre"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:weightSum="2"
                android:layout_marginBottom="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center|start"
                    android:text="@string/rating"
                    android:textSize="20sp"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="170dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">
                    <RatingBar
                        android:id="@+id/rating_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:theme="@style/GoldenRatingBar" />
                </LinearLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

                <EditText
                    android:id="@+id/et_Release"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/release"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:inputType="textImeMultiLine"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp">

                <EditText
                    android:id="@+id/et_Deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/deskripsi"
                    android:textColor="@android:color/black"
                    android:textSize="20sp"
                    android:inputType="textImeMultiLine"
                    android:autofillHints="" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/bAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/save"
                android:background="@drawable/button_shape2"
                android:paddingLeft="20px"
                android:paddingRight="20px"
                android:textColor="@android:color/white"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</FrameLayout>